0.8.11 (2016-01-14)
===================

Bug fixes
---------

- Fix a bug that prevented the Docker container from correctly starting up
  (614e6b9).

0.8.10 (2016-01-14)
===================

Bug fixes
---------

- Fix a bug that prevented Hypothesis from working on GitHub (#2847).

- Fix a couple of crashing bugs in the Chrome extension (#2849, #2851).

- Fix a bug that caused the wrong group name to display on annotations in the
  stream (#2854).

- Fix a bug where threads were being shown uncollapsed instead of collapsed
  initially, and the collapse/uncollapse buttons didn't work (#2855).

- Strip the proxy prefixes from URLs we know to be proxied (through our "via"
  service) when normalising (#2861).

Miscellanea
-----------

- Add a clear "call to action" banner in the sidebar for signed-out users
  (#2843).

- Avoid truncating annotation cards that exceed the collapsed height
  by only a small amount (feature flagged: truncate_annotations) (#2859).

0.8.9 (2016-01-11)
==================

Bug fixes
---------

- Fix a bug where annotation deletions were not correctly processed by the
  "real-time" streamer (7daa709)

Features
--------

- Add a tutorial for new users to the sidebar (feature flagged:
  sidebar_tutorial). (#2824)

0.8.8 (2016-01-11)
==================

Bug fixes
---------

- Fix a bug where embedded videos were not always shown (#2828, #2807).

- Fix numerous usability issues and a potential denial-of-service attack
  associated with password resets (#2803).

- Fix a bug which prevented Hypothesis from being correctly re-activated on a
  Chrome tab after it navigated (#2838).

Features
--------

- Embedded videos can now be shown fullscreen (#2814, #2816).

- PDF documents can now be detected regardless of file extension (#2834).

Miscellanea
-----------

- We now clear any "selection" of annotations when a new annotation is created,
  so the editor is always visible (#2817).
